# physim

./: .gitignore  CMakeLists.txt  Makefile  README.md  imgui.ini
dependencies/: SFML-2.6.1  imgui  imgui-sfml
include/: common.h  fileManager.h  physim.h  types.h  uimanager.h
src/: common.cpp  fileManager.cpp  main.cpp  physim.cpp  types.cpp  uimanager.cpp
